# clex

./: .gitignore
build_dotGraph_ut/: Makefile
build_test/: Makefile
build_test/artifacts/: testApp
make_build/: Makefile
make_build_test/: Makefile
src/: app.c  app.h  clex.c  clex.h  dotGraph.c  dotGraph.h  linkedList.c  linkedList.h  main.c
src/app/: Makefile  app.c  appInstance.c  appInterface.c  appInterface.h
src/app/test/: testApp.c
src/arraySearch/: CMakeLists.txt  arraySearchInterface.c  arraySearchInterface.h  arraySearchLrs.c  arraySearchMaxSubarrayInstance.c
src/arraySearch/test/: testArraySearch.c  testArraySearchDebug.c  testLrsArraySearch.c
src/arraySort/: CMakeLists.txt  arrayHeapSortInstance.c  arraySortImplementation.h  arraySortInterface.c  arraySortInterface.h
src/arraySort/test/: testArraySort.c  testArraySortDebug.c
src/task/: Makefile  taskInstance.c  taskInterface.c  taskInterface.h
src/task/test/: testTask.c
tests/: testDotGraph.c
